--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ _doc/notebooks/python/bin/*
 _doc/notebooks/python/schema_pb2.py
 _doc/notebooks/python/schema.proto
 _doc/notebooks/python/protoc-*.zip
+_doc/sphinxdoc/source/HISTORY.rst
