--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 coverage
 jinja2
 jyquickhelper
-pyquickhelper
+pyquickhelper>=1.9
 python-multipart
 sphinx_modern_theme_modified
 sphinxcontrib.blockdiag
