--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 coverage
 jinja2
 jyquickhelper
+git+https://github.com/sdpython/nbconvert.git@fixes
 pyquickhelper>=1.9
 python-multipart
 sphinx_modern_theme_modified
