--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ install:
   #- conda build build_tools/conda-recipe --quiet
   - conda install -q --file=requirements_conda.txt
   - pip install -r requirements.txt
+  - export PYTHONPATH=src
 script:
   - python setup.py unittests
