--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,6 @@ _doc/notebooks/python/schema_pb2.py
 _doc/notebooks/python/schema.proto
 _doc/notebooks/python/protoc-*.zip
 _doc/sphinxdoc/source/HISTORY.rst
+_doc/sphinxdoc/source/_temp_custom_run_script_.py.pkl
+_doc/sphinxdoc/source/_temp_custom_run_script_.py
+_doc/sphinxdoc/source/phdoc_static/viz.js
