--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
   - "%PYTHON%\\Scripts\\pymy_install3 --set=pyquickhelper"
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
   - "%PYTHON%\\Scripts\\pymy_install3 --task=tool --source=zip graphviz"
-  - "set PATH=%PATH%;C:\\projects\\mathenjeu\\build\\update_modules\\Graphviz\\bin"
+  - "set PATH=%PATH%;C:\\projects\\lecture_citation\\build\\update_modules\\Graphviz\\bin"
   - set PYTHONPATH=src
 build: off
 
