--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 coverage
+ipython
 jinja2
+jupyter
 jupyter_sphinx
 jyquickhelper
+matplotlib
+nbformat
+notebook
+numpy
+pandas
+pillow
 pycodestyle
 pylint
 pyquickhelper>=1.9
 python-multipart
+Sphinx
 sphinxcontrib.imagesvg
 sphinxcontrib.blockdiag
 toml
