--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,12 @@ dist: xenial
 sudo: true
 language: python
 python:
-  - "3.7"
-env:
-  - SDL_VIDEODRIVER=dummy SDL_AUDIODRIVER=disk
+  - "3.8"
 install:
-  # We do this conditionally because it saves us some downloading if the
-  # version is the same.
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda install conda-build
-  # Useful for debugging any issues with conda
-  - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy mkl
-  - source activate test-environment
-  # - make all
-  #- conda build build_tools/conda-recipe --quiet
-  - conda install -q --file=requirements_conda.txt
-  - pip install -r requirements.txt
-  - export PYTHONPATH=src
+    - pip install -r requirements.txt
+    - npm install
+    - pip install sphinx$sphinxconstraint
+    - pip install tkinterquickhelper --no-deps
+    - export PYTHONPATH=src
 script:
   - python setup.py unittests
