--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,14 +45,7 @@ jobs:
                     sudo apt-get install -y graphviz
           
       - run:
-          name: install dependencies 1
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements_conda.txt
-            
-      - run:
-          name: install dependencies 2
+          name: install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
