refactor setup.py

--- a/.local.jenkins.lin.yml
+++ b/.local.jenkins.lin.yml
@@ -15,7 +15,7 @@ install:
   - $PYINT -m pip freeze
 
 script:
-  - { CMD: "$PYINT -u setup.py unittests", NAME: "UT" }
+  - { CMD: "$PYINT -u setup.py unittests --covtoken=fb2728b3-4c16-48b4-89fa-9e0b2b0580a4", NAME: "UT" }
   - { CMD: "$PYINT -u setup.py unittests_LONG", NAME: "UT_LONG", TIMEOUT: 3600 }
 
 after_script:
