--- a/.github/workflows/check-urls.yml
+++ b/.github/workflows/check-urls.yml
@@ -25,7 +25,7 @@ jobs:
     - name: urls-checker-code
       uses: urlstechie/urlchecker-action@master
       with:
-        subfolder: teachpyx
+        subfolder: lecture_citation
         file_types: .md,.py,.rst,.ipynb
         print_all: false
         timeout: 5
