--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: tlylt/install-graphviz@v1
 
       - name: Install pandoc
-        run: sudo apt-get install -y pandoc protobuf-compiler
+        run: sudo apt-get install -y pandoc
 
       - name: Install requirements
         run: python -m pip install -r requirements.txt
@@ -42,11 +42,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
-
-      - name: protobuf version
-        run: |
-          protoc --version
-          python -c "import google.protobuf as gp;print(gp.__version__)"
 
       - name: Generate coverage report
         run: |
