--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ init:
 install:
   - "%PYTHON%\\python -m pip install --upgrade pip"
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
-  - set PYTHONPATH=src
+  - "%PYTHON%\\Scripts\\pip install -r requirements-dev.txt"
 build: off
 
 test_script:
