--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
       - run:
           name: run tests
           command: |
-            python setup.py unittests
+            python -m pytest _unittests
 
       - run:
           name: wheel
