--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,11 @@ exclude = [
 # Same as Black.
 line-length = 88
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "_doc/conf.py" = ["F821"]
 "lecture_citation/__init__.py" = ["E501"]
 "tealecture_citationchpyx/tools/__init__.py" = ["F401"]
